# substrate-without-frame

./: README.md
frameless-runtime/: Cargo.toml
frameless-runtime/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: main.rs
