[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
parity-scale-codec = { version = "3.2.2", features = ["derive"] }
sp-application-crypto = "13.0.0"
sp-core = "12.0.0"
sp-runtime = "14.0.0"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
runtime = { package = "frameless-runtime", path = "../frameless-runtime"}
